--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LogIn.LogInActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -24,7 +24,11 @@
         </activity>
         <activity
             android:name=".LogIn.RegisterActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".poll.CreatePoll"
+            android:label="@string/poll_label_create"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
