--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
+jdk:
+  - oraclejdk8
 install:
-  -app/gradle assemble
+  - cd app/
+  - gradle assemble
 script:
-  -app/gradle check
+  - cd app/
+  - gradle check
