--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
-before_install:
-  - chmod +x gradlew
 install:
   - cd app/
-  - ./gradlew assemble
+  - gradle assemble
 script:
-  - cd app/
-  - ./gradlew check
+  - cd app
+  - gradle check
