--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".poll.CreatePoll"
             android:label="@string/poll_label_create"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".poll.Poll"
+            android:label="@string/poll_label_poll"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
