--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk8
 install:
   - cd app/
-  - ./gradlew assemble
+  - ./gradlew assemble --stacktrace
 script:
   - cd app
-  - ./gradlew check
+  - ./gradlew check --stacktrace
