--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk8
 install:
   - cd app/
-  - ./gradlew assemble --stacktrace
+  - gradle
 script:
   - cd app
-  - ./gradlew check --stacktrace
+  - gradle
