--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="partyplaner.partyplaner">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -34,5 +35,4 @@
             android:label="@string/poll_label_poll"
             android:parentActivityName=".MainActivity"/>
     </application>
-
 </manifest>
