--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,16 @@ android:
   - platform-tools
   - build-tools-26.0.2
   - android-26
+  
+before_install:
+- chmod +x gradlew  
+  
 install:
   - cd app
   - ./gradlew build connectedCheck
 script:
   - cd app
-  - ./gradlew build connectedCheck 
+  - ./gradlew build connectedCheck
 
   
  
