--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 - chmod +x gradlew  
   
 script:
-  - ./gradlew build connectedCheck
+  - ./gradlew assembleRelease --stacktrace
 
   
  
