--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ android:
   - tools
   - build-tools-25.0.0
   - android-25
-install:
-  - cd app/
-  - gradle build connectedCheck
+before_install:
+  - chmod +x gradlew
 script:
-  - cd app
-  - gradle build connectedCheck
+  - ./gradlew assembleRelease --stacktrace
