--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ android:
   - build-tools-26.0.2
   - android-26
 before_script:
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
