--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,12 @@ android:
   - build-tools-26.0.2
   - android-26
 before_script:
-  - echo no | android create avd --force -n test -t android-26
-  - emulator -avd test -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 before_install:
   - chmod +x gradlew
 script:
   - ./gradlew assemble
-  - ./gradlew build connectedCheck
+  - ./gradlew clean build connectedCheck
