--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,24 @@
 language: android
 android:
+  env:
+    matrix:
+     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
   components:
   - tools
   - platform-tools
   - tools
   - build-tools-26.0.2
   - android-26
+  - sys-img-armeabi-v7a-android-19
 before_script:
+  - chmod +x gradlew
   - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
+
+before_install:
+  
+script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
-before_install:
-  - chmod +x gradlew
-script:
   - ./gradlew assemble
-  - ./gradlew clean build connectedCheck
+  - ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
