--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,14 @@ before_script:
   - emulator -avd test -no-skin -no-audio -no-window &
 
 before_install:
+  - pip install --user codecov
   
 script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
   - ./gradlew assemble
   - ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
+
+after_success:
+  - codecov
+  
