--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: android
 android:
-  env:
-    matrix:
-     - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
   components:
   - tools
   - platform-tools
@@ -12,8 +9,8 @@ android:
   - sys-img-armeabi-v7a-android-19
 before_script:
   - chmod +x gradlew
-  - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - -avd Nexus_5X_API_23 -wipe-data
+  - -avd Nexus_5X_API_23 -wipe-data & EMULATOR_PID=$!
 
 before_install:
   - pip install --user codecov
@@ -21,9 +18,6 @@ before_install:
 script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+  - ./gradlew connectedAndroidTest -i
   - ./gradlew assemble
   - ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
-
-after_success:
-  - codecov
-  
