--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ android:
 before_script:
   - chmod +x gradlew
   - android list targets
-  - echo no | android create avd --force --name test --target android-26 --abi armeabi-v7a -c 32M
+  - echo no | android create avd --force --name test --target android-26
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb devices
