--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: android
 
-     
 android:
 
   components:
@@ -11,10 +10,15 @@ android:
   - android-26
   - sys-img-armeabi-v7a-android-19
   - sys-img-armeabi-v7a-android-26
+  - extra-google-google_play_services
+  - extra-google-m2repository
+  - extra-android-m2repository
+  - addon-google_apis-google-19
+   
 before_script:
   - chmod +x gradlew
   - android list targets
-  - echo no | android create avd --force --name test --target android-26
+  - echo no | android create avd --force --name test --target android-19 --abi armeabi-v7a-android-19
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb devices
