--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,17 @@ android:
   
 
 before_script:
- - echo no | android create avd --force -n test -t android-19 --abi armeabi-v7a
+ - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi google_apis-google-$ANDROID_API
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 & 
    
 
 script:
-  - ./gradlew clean build connectedAndroidTest
+  - ./gradlew clean installDebug
+  - ./gradlew check
+  - ./gradlew testDebugUnitTest
+  - ./gradlew connectedDebugAndroidTest
 
 
   
