--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ android:
   - android-$EMULATOR_API
   - addon-google_apis-google-19
   - extra-google-google_play_services
-  - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-  - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
+  - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+  - sys-img-armeabi-v7a-google_apis-$EMULATOR_API_LEVEL
   - extra-google-m2repository
   - extra-android-m2repository
   - sys-img-x86-android-19
@@ -28,7 +28,7 @@ android:
   
 
 before_script:
- - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi google_apis-google-$ANDROID_API
+ - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi $ANDROID_ABI
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 & 
