--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ android:
   
 
 before_script:
- - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi $ANDROID_ABI
+ - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi $EMULATOR_API
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 & 
