--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 language: android
 
-env:
- global:
-   - ANDROID_ABI=26
-   - EMULATOR_API=19
-   - ANDROID_BUILD_TOOLS=26.0.2
    
 android:
   components:
   - tools
   - platform-tools
   - tools
-  - build-tools-$ANDROID_BUILD_TOOLS
-  - android-$ANDROID_ABI
-  - android-$EMULATOR_API
+  - build-tools-23.0.1
+  - android-4
+  - android-10
+  - android-19
+  - android-23
+  - android-25
   - addon-google_apis-google-19
   - extra-google-google_play_services
   - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
@@ -26,11 +24,18 @@ android:
   - android-sdk-license-.+
   - google-gdk-license-.+
   
-
+env:
+  matrix:
+    - ANDROID_TARGET=android-4 ANDROID_ABI=armeabi
+    - ANDROID_TARGET=android-10 ANDROID_ABI=armeabi
+    - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
 before_script:
- - echo no | android create avd --force -n test -t android-$EMULATOR_API --abi $EMULATOR_API
+ - android list targets
+ - jdk_switcher use oraclejdk8
+ - echo no | android create avd --force -n test -t android-$ANDROID_TARGET --abi $ANDROID_ABI_API
  - emulator -avd test -no-skin -no-audio -no-window &
- - android-wait-for-emulator
+ - adb wait-for-emulator
  - adb shell input keyevent 82 & 
    
 
