--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ android:
   - tools
   - platform-tools
   - tools
-  - build-tools-23.0.1
+  - build-tools-26.0.2
   - android-4
   - android-10
   - android-19
@@ -24,16 +24,10 @@ android:
   - android-sdk-license-.+
   - google-gdk-license-.+
   
-env:
-  matrix:
-    - ANDROID_TARGET=android-4 ANDROID_ABI=armeabi
-    - ANDROID_TARGET=android-10 ANDROID_ABI=armeabi
-    - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
-    - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
 before_script:
  - android list targets
  - jdk_switcher use oraclejdk8
- - echo no | android create avd --force -n test -t android-$ANDROID_TARGET --abi $ANDROID_ABI_API
+ - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
  - emulator -avd test -no-skin -no-audio -no-window &
  - adb wait-for-emulator
  - adb shell input keyevent 82 & 
