--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ android:
 before_script:
  - android list targets
  - jdk_switcher use oraclejdk8
- - echo no | android create avd --force -n test -t android-19 --abi x86 -no-accel
+ - echo no | android create avd --force -n test -t android-19 --abi x86 
  - emulator -avd test -no-skin -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 & 
