--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="partyplaner.partyplaner">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -35,7 +36,10 @@
             android:name=".poll.Poll"
             android:label="@string/poll_label_poll"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".EventMainActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".EventMainActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Veranstaltung.EditEventActivity"></activity>
     </application>
+
 </manifest>
