--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ android:
   - tools
   - platform-tools
   - tools
+  - build-tools-23.0.1
+  - build-tools-25.0.2
   - build-tools-26.0.2
   - android-4
   - android-10
