--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ env:
         - ANDROID_TARGET=android-10 ANDROID_ABI=armeabi
         - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
         - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-26 ANDROID_ABI=x86-android-26
   
 before_script:
  - android list targets
