--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ android:
   - build-tools-23.0.1
   - build-tools-25.0.2
   - build-tools-26.0.2
+  - build-tools-26.1.1
   - android-4
   - android-10
   - android 19
