--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,3 +42,4 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
