--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="partyplaner.partyplaner">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -36,14 +37,19 @@
             android:name=".poll.Poll"
             android:label="@string/poll_label_poll"
             android:parentActivityName=".EventMainActivity" />
-        <activity android:name=".EventMainActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".EventMainActivity"
+            android:parentActivityName=".MainActivity" />
 
-        <service android:name="partyplaner.api.APIService"
+        <service
+            android:name="partyplaner.api.APIService"
             android:exported="false" />
 
-        <activity android:name=".Veranstaltung.EditEventActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".Veranstaltung.EditEventActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".Veranstaltung.InviteUser"
+            android:parentActivityName=".EventMainActivity"></activity>
     </application>
 
 </manifest>
