--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ android:
   - extra-android-m2repository
   - sys-img-x86-android-26
   - sys-img-armeabi-v7a-android-25
+  - sys-img-armeabi-v7a-android-26
   licenses:
   - android-sdk-preview-license-.+
   - android-sdk-license-.+
@@ -32,7 +33,7 @@ env:
         - ANDROID_TARGET=android-10 ANDROID_ABI=armeabi
         - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
         - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
-        - ANDROID_TARGET=android-26 ANDROID_ABI=x86-android-26
+        - ANDROID_TARGET=android-26 ANDROID_ABI=armeabi-v7a-android-26
   
 before_script:
  - android list targets
