--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ env:
     matrix:
         - ANDROID_TARGET=android-4 ANDROID_ABI=armeabi
         - ANDROID_TARGET=android-10 ANDROID_ABI=armeabi
+        - ANDROID_TARGET=android-16 ANDROID_ABI=armeabi-v7a
         - ANDROID_TARGET=android-19 ANDROID_ABI=armeabi-v7a
         - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
         - ANDROID_TARGET=android-26 ANDROID_ABI=armeabi-v7a-android-26
@@ -40,7 +41,7 @@ before_script:
  - jdk_switcher use oraclejdk8
  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI 
  - emulator -avd test -no-skin -no-audio -no-window &
- - android-wait-for-device
+ - android-wait-for-emulator
  - adb shell input keyevent 82 & 
    
 
