--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: android
 
-   
 android:
   components:
   - tools
@@ -40,7 +39,7 @@ before_script:
  - android list targets
  - jdk_switcher use oraclejdk8
  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI 
- - emulator -avd test -no-skin -no-audio -no-window &
+ - emulator -avd test -no-audio -no-window &
  - android-wait-for-emulator
  - adb shell input keyevent 82 & 
    
