--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
             android:configChanges="orientation"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -37,21 +37,21 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".poll.CreatePoll"
-            android:label="@string/poll_label_create"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".EventMainActivity" />
+            android:label="@string/poll_label_create"
+            android:parentActivityName=".EventMainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".poll.Poll"
-            android:label="@string/poll_label_poll"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".EventMainActivity" />
+            android:label="@string/poll_label_poll"
+            android:parentActivityName=".EventMainActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".EventMainActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
 
         <service
             android:name="partyplaner.api.APIService"
@@ -60,18 +60,22 @@
         <activity
             android:name=".Veranstaltung.EditEventActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity" />
-
-        <activity android:name=".Veranstaltung.InviteUser"
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Veranstaltung.InviteUser"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".EventMainActivity"></activity>
-
-        <activity android:name=".Profile.EditProfileActivity"
+            android:parentActivityName=".EventMainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profile.EditProfileActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:parentActivityName=".MainActivity"></activity>
+            android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Contacts.ShowContact"
+            android:parentActivityName=".EventMainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
