--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,26 @@
 apply plugin: 'com.android.application'
 
 android {
-	lintOptions {
+    lintOptions {
         abortOnError false
     }
     compileSdkVersion 26
-	buildToolsVersion "26.0.2"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "partyplaner.partyplaner"
-        minSdkVersion 19
+        minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 sourceSets {
@@ -31,8 +32,8 @@ sourceSets {
 }
 
 
-dependencies {	
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
