--- a/travis.yml
+++ b/travis.yml
@@ -6,12 +6,31 @@ android:
   - tools
   - platform-tools
   - tools
-  - build-tools-26.0.26
+  - build-tools-26.0.2
   - android-26
+  - android-19
+  - android-23
+  - android-25
 
 before_install:
- - chmod +x gradlew
+ - chmod +x ./gradlew
+ - android list targets
+
+env:
+    matrix:
+        - ANDROID_TARGET=android-16 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-26 ANDROID_ABI=armeabi-v7a
+
+before_script:
+ - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI 
+ - emulator -avd test -no-skin -no-audio -no-window &
+ - android-wait-for-emulator
+ - adb shell input keyevent 82 & 
  
 script:
- - ./gradlew assembleRelease --stacktrace 
- 
+  - ./gradlew clean installDebug
+  - ./gradlew check
+  - ./gradlew testDebugUnitTest
+  - ./gradlew connectedDebugAndroidTest
