--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,29 @@ android:
   - tools
   - build-tools-26.0.2
   - android-26
- licenses:
-  - android-sdk-license-.+
-  - google-gdk-license-.+  
+  - android-19
+  - android-23
+  - android-25
+
+before_install:
+ - chmod +x ./gradlew
+ - android list targets
+
+env:
+    matrix:
+        - ANDROID_TARGET=android-16 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
+        - ANDROID_TARGET=android-26 ANDROID_ABI=armeabi-v7a
+
+before_script:
+ - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI 
+ - emulator -avd test -no-skin -no-audio -no-window &
+ - android-wait-for-emulator
+ - adb shell input keyevent 82 & 
  
 script:
- - chmod +x ./gradlew
- - ./gradlew assemble
-
- 
+  - ./gradlew clean installDebug
+  - ./gradlew check
+  - ./gradlew testDebugUnitTest
+  - ./gradlew connectedDebugAndroidTest 
