--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,32 @@
 language: android
-jdk: oraclejdk8
-
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y pax
+env:
+  global:
+  - ANDROID_API_LEVEL=26
+  - ANDROID_BUILD_TOOLS_VERSION=26.0.2
+  - ANDROID_EMU_API_LEVEL=22
+  - ANDROID_ABI=armeabi-v7a
+  - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
+  - QEMU_AUDIO_DRV=none # Remove audio
 android:
- components:
+  components:
   - tools
   - platform-tools
   - tools
-  - build-tools-26.0.2
-  - android-26
-  - android-19
-  - android-23
-  - android-25
-
-before_install:
- - chmod +x ./gradlew
- - android list targets
-
-env:
- matrix:
-  - ANDROID_TARGET=android-16 ANDROID_ABI=armeabi-v7a
-  - ANDROID_TARGET=android-21 ANDROID_ABI=armeabi-v7a
-  - ANDROID_TARGET=android-25 ANDROID_ABI=armeabi-v7a
-  - ANDROID_TARGET=android-26 ANDROID_ABI=armeabi-v7a
-
+  - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+  - android-$ANDROID_API_LEVEL
+  - android-$ANDROID_EMU_API_LEVEL
+  - extra-android-support
+  - sys-img-$ANDROID_ABI-google_apis-$ANDROID_EMU_API_LEVEL
 before_script:
- - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI 
- - emulator -avd test -no-skin -no-audio -no-window &
- - android-wait-for-emulator
- - adb shell input keyevent 82 & 
- 
+  - echo no | android create avd --force -n test -t android-$ANDROID_EMU_API_LEVEL --abi google_apis/$ANDROID_ABI
+  - emulator -avd test -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 script:
   - ./gradlew clean installDebug
   - ./gradlew check
   - ./gradlew testDebugUnitTest
-  - ./gradlew connectedDebugAndroidTest 
+  - ./gradlew connectedDebugAndroidTest
