--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
-  - ./gradlew clean installDebug
-  - ./gradlew check
-  - ./gradlew testDebugUnitTest
-  - ./gradlew connectedDebugAndroidTest
+  - chmod +x ./gradlew clean installDebug
+  - chmod +x ./gradlew check
+  - chmod +x ./gradlew testDebugUnitTest
+  - chmod +x ./gradlew connectedDebugAndroidTest
