--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: android
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y pax
+  - chmod +x gradlew
 env:
   global:
   - ANDROID_API_LEVEL=26
