--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ before_script:
   - adb shell input keyevent 82 &
 script:
   - chmod +x android list target
-  - ./gradlew connectedAndroidTest
+  - ./gradlew connectedDebugAndroidTest
