--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,5 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
-  - chmod +x android list target
+  - ./gradlew build connectedCheck
   - ./gradlew connectedDebugAndroidTest
